# lb-monitor

./: .gitignore  Cargo.toml  README.md  justfile  lb-monitor.toml.example
assets/: example.html
src/: api.rs  cli.rs  config.rs  db.rs  diff.rs  fetch.rs  main.rs  notify.rs  parse.rs  query.rs  source.rs  tui.rs
