[package]
name = "lb-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
crossterm = "0.29.0"
hex = "0.4.3"
notify-rust = "4.11.7"
ratatui = "0.29.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
toml = "0.9.8"

[dev-dependencies]
tempfile = "3.23.0"
