[package]
name = "lb-monitor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "lbm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.31"
hex = "0.4.3"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport", "tokio1", "tokio1-rustls-tls"] }
ratatui = "0.29.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
shellexpand = { version = "3.1.2", features = ["path"] }

[dev-dependencies]
tempfile = "3.23.0"
